<resources>
    <string name="app_name">MisRecetapps</string>
    <string name="listado_de_recetas">Ver mis recetas</string>
    <string name="nueva_receta">Nueva preparación</string>
    <string name="hint_receta_nombre">Nombre de la receta</string>
    <string name="hint_receta_favorito">Favorito</string>
    <string name="nueva_receta_con_preparaciones">Nueva receta con preparaciones</string>
    <string name="hint_receta_porciones">¿Cuantos platos serviremos?</string>
    <string name="hint_receta_producto">Producto</string>
    <string name="hint_receta_cantidad">Cantidad</string>
    <string name="hint_receta_intensidad">Intensidad</string>
    <string name="hint_receta_temperatura">Temperatura</string>
    <string name="hint_receta_unidad">Unidad de medida</string>
    <string name="hint_receta_unidad_temperatura">Unidad de temperatura</string>
    <string name="hint_receta_selecciona_producto">Selecciona un Producto</string>
    <string name="hint_receta_selecciona_artefacto">Selecciona un Artefacto</string>
    <string name="hint_receta_minutos_de_uso">Minutos de uso</string>
    <string name="title_receta_card_ingrediente">Ingrediente %1$d</string>
    <string name="title_receta_card_artefacto">Artefacto %1$d</string>
    <string name="title_receta_card_instruccion">Paso %1$d</string>
    <string name="title_receta_titulo">Título</string>
    <string name="title_receta_porciones">Porciones</string>
    <string name="title_receta_ingredientes">Ingredientes</string>
    <string name="subtitle_receta_ingredientes">Elije los ingredientes e indica la cantidad…</string>
    <string name="subtitle_receta_artefactos">Si la receta lo requiere, selecciona artefactos…</string>
    <string name="subtitle_receta_instrucciones">Describe, paso a paso, cómo preparar esta receta…</string>
    <string name="agregar_otro_ingrediente">Agregar otro ingrediente</string>
    <string name="agregar_otro_artefacto">Agregar otro artefacto</string>
    <string name="elimina_ingrediente">Elimina ingrediente</string>
    <string name="elimina_artefacto">Elimina artefacto</string>
    <string name="title_receta_artefactos">Artefactos</string>
    <string name="title_receta_instrucciones">Instrucciones</string>
    <string name="agregar_otra_instruccion">Agregar otra instrucción</string>
    <string name="hint_receta_instruccion">¿Qué hacemos en este paso?.</string>
    <string name="elimina_instruccion">Elimina paso</string>
    <string name="unidad_temperatura">°C</string>
    <string name="temp_images_dir">temp_images</string>
    <string name="temp_image">temp_image.jpg</string>
    <string name="authorities">curso.android.misrecetapps.fileprovider</string>
    <string name="guardar_receta">Guardar receta</string>
    <string name="error_receta_nombre">Debe darle un nombre a la receta!</string>
    <string name="error_receta_porciones">Debe indicar la cantidad de porciones como número!</string>
    <string name="error_receta_producto">Debe seleccionar un producto!</string>
    <string name="error_receta_artefacto">Si va a utilizar un artefacto, debe seleccionarlo de la lista!</string>
    <string name="error_receta_minutos">Debe indicar los minutos de uso!</string>
    <string name="error_receta_seleccionar_opcion">Debe seleccionar una opción!</string>
    <string name="error_receta_cantidad">Debe indicar la cantidad utilizada de este producto!</string>
    <string name="error_receta_unidad_producto">Debe seleccionar la unidad de medida!</string>
    <string name="error_producto_cantidad">Debe indicar la cantidad de la presentación!</string>
    <string name="opciones_en_receta">Opciones en receta</string>
    <string name="separador">separador</string>
    <string name="sin_instrucciones">No hay instrucciones guardadas para esta receta. Cuando lo desee, puede incorporarlas haciendo click en editar.</string>
    <string name="sin_instrucciones_hint">Sin instrucciones para este paso.</string>
    <string name="error_input_temperatura">Debe indicar la temperatura en números positivos!</string>
    <string name="error_nombre_existe">¡Ya existe un item con ese nombre, elija otro!</string>
    <string name="intensidad_hint">Intensidad</string>
    <string name="action_listado_recetas">Listado de recetas</string>
    <string name="action_nueva">Crear receta</string>
    <string name="cargando_la_compra">Cargando la compra</string>
    <string name="actualizar_precios">Actualizar precios</string>
    <string name="info_cargar_compra">Al cargar la compra de ingredientes realizada, usted podrá actualizar el costo de la receta. Para hacerlo, deberá indicar el precio, la cantidad y la unidad de medida en que se presenta el producto comprado. Ej.: La harina costó 1,50 EUR y su presentación es de 1000 gramos. Si desconoce la información de algún producto, puede dejar la que está por defecto y cargar la del resto.</string>
    <string name="lectura_de_instrucciones">Lectura de instrucciones</string>
    <string name="info_lectura_de_receta">Al hacer click en el ícono del megáfono, activará la lectura de receta por comandos de voz. De este modo, podrá tener las manos libres para cocinar.</string>
    <string name="info_lectura_palabras_clave">Las palabras clave para navegar por las instrucciones son:</string>
    <string name="title_producto">Incorporando Producto</string>
    <string name="title_nombre">Nombre</string>
    <string name="hint_producto_nombre">¿Cuál es el nombre del producto?</string>
    <string name="title_precio">Precio</string>
    <string name="title_desperdicio">Desperdicio (%)</string>
    <string name="hint_producto_desperdicio">¿Cuál es el porcentaje de desperdicio?</string>
    <string name="error_precio">\"Debe indicar un precio en números.</string>
    <string name="error_desperdicio">Debe indicar el porcentaje de desperdicio.  Si lo desconoce, déjelo en 0.</string>
    <string name="nuevo_producto">Agrega producto</string>
    <string name="action_listado_producto">Listado de productos</string>
    <string name="action_nuevo_producto">Agregar producto</string>
    <string name="hint_unidad">Unidad</string>
    <string name="hint_precio">0,00</string>
    <string name="hint_cantidad">1000</string>
    <string name="simbolo_moneda">$</string>
    <string name="lxs">lxs</string>
    <string name="title_artefacto">Incorporando Artefacto</string>
    <string name="hint_artefacto_nombre">¿Cuál es el nombre del artefacto?</string>
    <string name="title_consumo">Consumo</string>
    <string name="title_medida_de_uso">Medida de uso</string>
    <string name="subtitle_medida_de_uso_1">Debe indicar con que sistema se mide el uso del artefacto.</string>
    <string name="subtitle_medida_de_uso_2">Por ejemplo, una licuadora se mide en niveles: 1, 2, 3.</string>
    <string name="subtitle_medida_de_uso_3">Un horno, en cambio, se mide en temperaturas: 200 grados ºC.</string>
    <string name="subtitle_consumo">Debe indicar la potencia del artefacto. Por ejemplo: 1000 W/h.</string>
    <string name="artefacto_niveles">Niveles</string>
    <string name="artefacto_grados">Grados ºC o ºF</string>
    <string name="action_listado_artefacto">Listado de artefactos</string>
    <string name="action_nuevo_artefacto">Agregar artefacto</string>
    <string name="error_artefacto_cantidad">¡Debe expresar la potencia del artefacto en números!</string>
    <string name="error_unidad">Debe seleccionar una unidad de medida del listado</string>
    <string name="error_radio_button">¡Debe seleccionar una opción!</string>
    <string name="buscar">Buscar…</string>
    <string name="title_receta">Creando receta</string>
    <string name="subtitle_select">Si no está en la lista, puedes crearlo…</string>
    <string name="selecciona_un_item">Selecciona un item</string>
    <string name="porciones">Porciones:</string>
    <string name="nombre_de_receta">Nombre de receta</string>
    <string name="cero">0</string>
    <string name="costo_x_porcion">Costo x porción:</string>
    <string name="costo_total">Costo total:</string>
    <string name="price_example">$ 0.00</string>
    <string name="ingredientes">Ingredientes:</string>
    <string name="artefactos">Artefactos:</string>
    <string name="instrucciones">Instrucciones:</string>
    <string name="foto_principal">Foto principal</string>
    <string name="sacar_foto">Sacar foto</string>
    <string name="filrado_por_producto">Filrado por producto</string>
    <string name="incorpora_filtro">Incorpora filtro</string>
    <string name="app_exit">Salir</string>
    <string name="info_detener">Se detiene la lectura de instrucciones y se cierra la escucha de comandos de voz.</string>
    <string name="info_detener_title">Detener</string>
    <string name="punto">punto</string>
    <string name="info_repetir">Se repite la última reproducción.</string>
    <string name="info_repetir_title">Repetir</string>
    <string name="info_anterior">Se reproduce el paso previo.</string>
    <string name="info_anterior_title">Anterior</string>
    <string name="info">info</string>
    <string name="descarga_pdf">Descarga pdf</string>
    <string name="elimina_receta">Elimina receta</string>
    <string name="edita_receta">Edita receta</string>
    <string name="envia_receta">Envia receta</string>
    <string name="marca_como_favorita">Marca como favorita</string>
    <string name="send_pdf">Envía PDF</string>
    <string name="send_receta">Envía receta</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="importar_foto">Importar Foto</string>
</resources>