<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="curso.android.misrecetapps.MainActivity">
    <item
        android:id="@+id/receta_list"
        android:orderInCategory="1"
        android:title="@string/action_listado_recetas"
        app:showAsAction="never"/>
    <item
        android:id="@+id/receta_form"
        android:orderInCategory="4"
        android:title="@string/action_nueva"
        app:showAsAction="never"/>
    <item
        android:id="@+id/producto_list"
        android:orderInCategory="2"
        android:title="@string/action_listado_producto"
        app:showAsAction="never"/>
    <item
        android:id="@+id/producto_form"
        android:orderInCategory="5"
        android:title="@string/action_nuevo_producto"
        app:showAsAction="never"/>
    <item
        android:id="@+id/artefacto_list"
        android:orderInCategory="3"
        android:title="@string/action_listado_artefacto"
        app:showAsAction="never"/>
    <item
        android:id="@+id/artefacto_form"
        android:orderInCategory="6"
        android:title="@string/action_nuevo_artefacto"
        app:showAsAction="never"/>
    <item
        android:id="@+id/app_exit"
        android:orderInCategory="999"
        android:title="@string/app_exit"
        app:showAsAction="never"/>
</menu>