<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.artefacto.ArtefactoFormFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_bottom_to_floating_button">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_title_horizontal"
                android:layout_marginBottom="@dimen/margin_undertitle"
                android:text="@string/title_artefacto"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_title_horizontal"
                android:layout_marginBottom="@dimen/margin_undertitle"
                android:text="@string/title_nombre"
                android:textColor="@color/primary"
                android:textSize="@dimen/font_size_title" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/artefacto_form_nombre"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height_artefacto"
                android:background="@drawable/background_square_white_bordered"
                android:hint="@string/hint_artefacto_nombre"
                android:inputType="textCapSentences"
                android:padding="@dimen/padding_input_select"
                android:textSize="@dimen/font_size_input_select"
                android:imeOptions="flagNoExtractUi|actionDone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_title_horizontal"
                    android:text="@string/title_consumo"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/font_size_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_undertitle"
                    android:text="@string/subtitle_consumo"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/font_size_subtitle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height_artefacto"
                android:background="@drawable/background_square_white_bordered"
                android:baselineAligned="false"
                android:focusable="true"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:gravity="center_vertical">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/artefacto_input_cantidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:background="@android:color/transparent"
                        android:digits="0123456789,"
                        android:hint="@string/hint_cantidad"
                        android:inputType="numberDecimal"
                        android:textAlignment="center"
                        android:textColor="@color/carbon"
                        android:textSize="@dimen/font_size_input_select"
                        android:imeOptions="flagNoExtractUi|actionDone"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="50"
                    android:background="@drawable/background_square_inside_bordered_white_end"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/artefacto_unidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:ellipsize="end"
                        android:focusable="true"
                        android:gravity="center"
                        android:hint="@string/hint_unidad"
                        android:maxLines="1"
                        android:textColor="@color/carbon"
                        android:textSize="@dimen/font_size_input_select"
                        app:drawableEndCompat="@drawable/ic_arrow_down_24" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/medida_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_title_horizontal"
                    android:text="@string/title_medida_de_uso"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/font_size_title" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_medida_de_uso_1"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/font_size_subtitle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_medida_de_uso_2"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/font_size_subtitle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_medida_de_uso_3"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/font_size_subtitle" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/medida_radiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/medida_intensidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:paddingHorizontal="3dp"
                    android:paddingBottom="3dp"
                    android:text="@string/artefacto_niveles"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/font_size_input_select" />

                <RadioButton
                    android:id="@+id/medida_temperatura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    android:paddingHorizontal="3dp"
                    android:paddingBottom="3dp"
                    android:text="@string/artefacto_grados"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/font_size_input_select" />

            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_check"
            app:maxImageSize="30dp"
            android:contentDescription="@string/guardar_receta"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"/>
    </LinearLayout>

</RelativeLayout>