<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.producto.ProductoFormFragment">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:orientation="vertical"
            android:paddingBottom="@dimen/padding_bottom_to_floating_button">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_title_horizontal"
                android:layout_marginBottom="@dimen/margin_undertitle"
                android:text="@string/title_producto"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_title_horizontal"
                android:layout_marginBottom="@dimen/margin_undertitle"
                android:text="@string/title_nombre"
                android:textColor="@color/primary"
                android:textSize="@dimen/font_size_title" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/producto_form_nombre"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height_producto"
                android:background="@drawable/background_square_white_bordered"
                android:hint="@string/hint_producto_nombre"
                android:inputType="textCapSentences"
                android:padding="@dimen/padding_input_select"
                android:textSize="@dimen/font_size_input_select"
                android:imeOptions="flagNoExtractUi|actionDone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_title_horizontal"
                android:layout_marginBottom="@dimen/margin_undertitle"
                android:text="@string/title_precio"
                android:textColor="@color/primary"
                android:textSize="@dimen/font_size_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height_producto"
                android:background="@drawable/background_square_white_bordered"
                android:baselineAligned="false"
                android:focusable="true"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_square_inside_bordered_start"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/simbolo_moneda"
                        android:textColor="@color/carbon"
                        android:textSize="@dimen/font_size_card_input_select" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="33"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/producto_input_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:background="@android:color/transparent"
                        android:digits="0123456789,"
                        android:hint="@string/hint_precio"
                        android:inputType="numberDecimal"
                        android:textAlignment="center"
                        android:textColor="@color/carbon"
                        android:textSize="@dimen/font_size_input_select"
                        android:imeOptions="flagNoExtractUi|actionDone"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_square_inside_bordered_center"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lxs"
                        android:textColor="@color/carbon"
                        android:textSize="@dimen/font_size_card_input_select" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="33"
                    android:gravity="center_vertical">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/producto_input_cantidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:background="@android:color/transparent"
                        android:digits="0123456789,"
                        android:hint="@string/hint_cantidad"
                        android:inputType="numberDecimal"
                        android:textAlignment="center"
                        android:textColor="@color/carbon"
                        android:textSize="@dimen/font_size_input_select"
                        android:imeOptions="flagNoExtractUi|actionDone"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="33"
                    android:background="@drawable/background_square_inside_bordered_white_end"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/producto_unidad"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:ellipsize="end"
                        android:focusable="true"
                        android:gravity="center"
                        android:hint="@string/hint_unidad"
                        android:maxLines="1"
                        android:textColor="@color/carbon"
                        android:textSize="@dimen/font_size_input_select"
                        app:drawableEndCompat="@drawable/ic_arrow_down_24" />
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_title_horizontal"
                android:layout_marginBottom="@dimen/margin_undertitle"
                android:text="@string/title_desperdicio"
                android:textColor="@color/primary"
                android:textSize="@dimen/font_size_title" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/producto_form_desperdicio"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height_producto"
                android:background="@drawable/background_square_white_bordered"
                android:digits="0123456789,"
                android:hint="@string/hint_producto_desperdicio"
                android:inputType="numberDecimal"
                android:padding="@dimen/padding_input_select"
                android:textSize="@dimen/font_size_input_select"
                android:imeOptions="flagNoExtractUi|actionDone"/>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_check"
            app:maxImageSize="30dp"
            android:contentDescription="@string/guardar_receta"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"/>
    </LinearLayout>

</RelativeLayout>